arreglando algunos errores de los templates y views

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>direcciones ip</h1>
-    <a href="{% url 'register_ip' %}">register_ip address</a>
-    <a href="{% url 'search_ip' %}">search_ip addresses</a>    
+    <a href="{% url 'register_ip' %}">registrar direcciones ip</a>
+    <a href="{% url 'search_ip' %}">buscar direcciones ip</a>    
 </body>
 </html>
