--- a/core/templates/register_ip.html
+++ b/core/templates/register_ip.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>resgitrar direcciones ip</title>
+    <title>Registrar direcciones IP</title>
 </head>
 <body>
-    <h1>registrar direcciones ip</h1>
+    <h1>Registrar direcciones IP</h1>
     <form method="post">
         {% csrf_token %}
-        <label for="ip_address">direccion ip:</label>
-        <input type="text"  id="ip_address" name="ip_address" required><br><br>
-        <label for="user_id">user id:</label>
-        <input type="number"  id="user_id" name="user_id" required><br><br>
-        <input type="submit" value="registrar">
+        <label for="ip_address">Dirección IP:</label>
+        <input type="text" id="ip_address" name="ip_address" required><br><br>
+        <label for="user_name">Nombre de usuario:</label>
+        <input type="text" id="user_name" name="user_name" required><br><br>
+        <label for="user_fullname">Nombre completo:</label>
+        <input type="text" id="user_fullname" name="user_fullname" required><br><br>
+        <input type="submit" value="Registrar">
     </form>
 </body>
 </html>
-
-
