--- a/core/templates/search_ip.html
+++ b/core/templates/search_ip.html
@@ -1,5 +1,9 @@
+
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+<html>
 <head>
     <title>buscar direcciones ip</title>
 </head>
