--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <html>
 <head>
     <title>DIRECCIONES IP</title>
