--- a/core/templates/register_ip.html
+++ b/core/templates/register_ip.html
@@ -15,7 +15,7 @@
         <input type="text" id="user_name" name="user_name" required><br><br>
         <label for="user_fullname">Nombre completo:</label>
         <input type="text" id="user_fullname" name="user_fullname" required><br><br>
-        <input type="submit" value="Registrar">
+        <input type="submit" value="Registrar" class="btn btn-register">
     </form>
 </body>
 </html>
