--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -1,3 +1,4 @@
+/* Estilos.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
@@ -21,4 +22,31 @@ th, td {
 th {
     background-color: #4CAF50;
     color: white;
+}
+
+/* Estilos para los botones */
+.btn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.btn-register {
+    background-color: #4CAF50;
+}
+
+.btn-search {
+    background-color: #008CBA;
+}
+
+.btn-back {
+    background-color: #f44336;
 }
