--- a/core/templates/search_ip.html
+++ b/core/templates/search_ip.html
@@ -26,5 +26,6 @@
         {% endfor %}
         </tbody>
     </table>
+    <a href="{% url 'index' %}" class="btn btn-back">Volver</a>
 </body>
 </html>
