--- a/core/templates/search_ip.html
+++ b/core/templates/search_ip.html
@@ -20,6 +20,7 @@
                 <th>id</th>
                 <th>direccion ip</th>
                 <th>username</th>
+                <th>nombre completo</th>
             </tr>
         </thead>
         </tbody>
@@ -28,6 +29,7 @@
             <td>{{ mac_address.id }}</td>
             <td>{{ mac_address.ip_address }}</td>
             <td>{{ mac_address.id_user.username }}</td>
+            <td>{{ mac_address.id_user.name }}</td>
         </tr>
         {% endfor %}
         </tbody>
