agregando fecha de registro

--- a/core/templates/search_ip.html
+++ b/core/templates/search_ip.html
@@ -21,6 +21,7 @@
                 <th>direccion ip</th>
                 <th>username</th>
                 <th>nombre completo</th>
+                <th>fecha de registro</th>  
             </tr>
         </thead>
         </tbody>
@@ -30,6 +31,8 @@
             <td>{{ mac_address.ip_address }}</td>
             <td>{{ mac_address.id_user.username }}</td>
             <td>{{ mac_address.id_user.name }}</td>
+            <td>{{ mac_address.date_registered }}</td>
+
         </tr>
         {% endfor %}
         </tbody>
