--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,8 +9,8 @@
     <h1>direcciones ip</h1>
     <br>
     <div class="btn-group">
-        <a href="{% url 'register_ip' %}" class="btn btn-register">Registrar direcciones IP</a>
-        <a href="{% url 'search_ip' %}" class="btn btn-search">Buscar direcciones IP</a>
+        <a href="{% url 'register_ip' %}" class="btn btn-register">Registrar direcciones IP</a><br><br>
+        <a href="{% url 'search_ip' %}" class="btn btn-search">Buscar direcciones IP</a><br><br>
     </div>    
 </body>
 </html>
