--- a/core/templates/search_ip.html
+++ b/core/templates/search_ip.html
@@ -23,6 +23,7 @@
                 <th>nombre completo</th>
                 <th>fecha de registro</th> 
                 <th>sucursal</th>
+                <th>editar</th>
             </tr>
         </thead>
         </tbody>
@@ -34,7 +35,9 @@
             <td>{{ mac_address.id_user.name }}</td>
             <td>{{ mac_address.date_registered }}</td>
             <td>{{ mac_address.sucursal }}</td>
-
+            <td>
+                <a href="{% url 'edit_ip' mac_address.id %}">Editar</a>
+            </td>
         </tr>
         {% endfor %}
         </tbody>
