--- a/core/templates/edit_ip.html
+++ b/core/templates/edit_ip.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,3 +29,4 @@
     </form>
 </body>
 </html>
+{% endblock %}
