--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>    
@@ -9,8 +12,10 @@
     <h1>direcciones ip</h1>
     <br>
     <div class="btn-group">
+        <a href="{% url 'index' %}" class="btn btn-home">inicio</a>
         <a href="{% url 'register_ip' %}" class="btn btn-register">Registrar direcciones IP</a><br><br>
         <a href="{% url 'search_ip' %}" class="btn btn-search">Buscar direcciones IP</a><br><br>
     </div>    
 </body>
 </html>
+{% endblock %}
