--- a/core/templates/search_ip.html
+++ b/core/templates/search_ip.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -45,3 +47,4 @@
     <a href="{% url 'index' %}" class="btn btn-back">Volver</a>
 </body>
 </html>
+{% endblock %}
