--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="btn-group">
-            <a href="{% url 'index' %}" class="btn btn-home">Página de Inicio</a>
+            <a href="{% url 'index' %}" class="btn btn-home">Inicio</a>
         </div>
     </header>
 
